# video_summary

./: .gitignore  README.md  pyproject.toml
video_summary/: BART.odt  FACE_BART.odt  audio_sentiment.py  faces.py  main.py  speakers_detectors.py  speech_activity.py  speech_from_video.py  summarize.py  text_sentiment.py  video_activity.py
