[tool.poetry]
name = "video_summary"
version = "0.0.1"
description = "Some works on video summarization"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "video_summary"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"